Fixed CSS misalignment in temp section

--- a/styles.css
+++ b/styles.css
@@ -53,10 +53,8 @@ body {
   align-items: center;
   cursor: pointer;
   padding: 0.8rem;
-  height: 150px;
-  width: 150px;
   border: 2px solid lightblue;
-  border-radius: 50%;
+  border-radius: 10px;
 }
 
 .temperature {
